# perun

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.rst  example.perun.ini  poetry.toml  pyproject.toml  setup.cfg
.github/workflows/: build_and_publish.yml  fair-software.yml  release.yaml  release.yml  run_tests.yaml  run_tests.yml  scorecards.yml  semantic_release.yml  version_changelog.yml
docs/: conf.py  configuration.rst  data.rst  index.rst  install.rst  quickstart.rst  requirements.txt  requirenments.txt  usage.rst
examples/: example.perun.ini
examples/live_callback/: README.md  perun_callback.py  requirenemts.txt  train_live.py
examples/mlflow/: perun_callback.py
examples/postprocess_callback/: README.md  requirements.txt  train.py
examples/torch_mnist/: README.md  requirements.txt  torch_mnist.py
examples/torchrun/: README.md  ddp.py  requirements.txt  srun_script.sh
perun/: __init__.py  __main__.py  application.py  cli.py  comm.py  configuration.py  coordination.py  core.py  decorator.py  logging.py  perun.py  processing.py  report.py  storage.py  subprocess.py  units.py  util.py  version.py
perun/api/: cli.py  decorator.py
perun/backend/: __init__.py  backend.py  device.py  hwmon.py  hwmon_grace.py  intel_rapl.py  nvml.py  powercap_rapl.py  psutil.py  rocmsmi.py  util.py
perun/data_model/: __init__.py  data.py  measurement_type.py  sensor.py
perun/extras/: __init__.py  horeka.py
perun/io/: __init__.py  bench.py  hdf5.py  io.py  json.py  pandas.py  pickle.py  text_report.py  util.py  yaml.py
perun/monitoring/: __init__.py  application.py  monitor.py  subprocess.py
templates/: CHANGELOG.md.j2
tests/: __init__.py  conftest.py  test_conf.py
tests/perun/: test_cli.py  test_configuration.py  test_coordination.py  test_core.py  test_perun.py  test_processing.py  test_util.py  util.py
tests/perun/api/: test_cli.py  test_decorator.py
tests/scripts/: error.py  exists.txt  exit.py  mpi_error.py  sleep.py  sleep_decorated.py
