[project]
name = "perun"
version = "0.5.0"
description = "Command line tool to easily estimate energy consumption of python applications."
authors = [
    {name = "Gutiérrez Hermosillo Muriedas, Juan Pedro", email = "juanpedroghm@gmail.com"},
]
dependencies = [
    "py-cpuinfo>=6.0.0",
    "numpy>=1.23",
    "psutil>=5.9.0",
    "h5py<4.0.0,>=3.2.0",
    "pandas>=1.3",
    "tabulate>=0.9",
]
requires-python = ">=3.8,<3.13"
readme = "README.md"
license = {text = "BSD-3-Clause"}

[project.urls]
homepage = "https://github.com/Helmholtz-AI-Energy/perun"

[project.optional-dependencies]
mpi = ["mpi4py<4.0,>=3.1"]
nvidia = ["nvidia-ml-py<13.0.0,>=12.535.77"]
rocm = ["pyrsmi<2.0.0,>=1.0.1"]

[project.scripts]
perun = "perun.api.cli:cli"

[tool.pdm.build]
includes = []

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
    "black>=22.0.0",
    "pre-commit>=3.0.0",
    "pydocstyle",
    "python-semantic-release>=8.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autoapi",
]

[tool.semantic_release]
version_variables = [ "perun/__init__.py:__version__", "docs/conf.py:release" ]
version_toml = ["pyproject.toml:project.version"]
commit_message = "{version} [skip ci]"

[tool.semantic_release.remote.token]
env = "GH_TOKEN"

[tool.semantic_release.branches.test]
match = "release-test"
prerelease = true

[tool.semantic_release.branches.release]
match = "release"
prerelease = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.isort]
skip = ["perun/__init__.py"]
known_third_party = ["cpuinfo", "h5py", "mpi4py", "numpy", "pandas", "psutil", "pytest"]
profile = "black"

[tool.pydocstyle]
match-dir = 'perun'
convention = 'numpy'

[tool.mypy]
exclude = [
    'tests/**/*'
]
